plugins {
    id 'java'
    id "io.spring.dependency-management" version "1.0.8.RELEASE"
}
apply plugin: 'java'
group 'com.fuli'
version '1.0-SNAPSHOT'

sourceCompatibility = 14
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
repositories {
    mavenCentral()
}
def fasterxml_jackson_version='2.10.3'
def google_guava_version='28.2-jre'
def okhttp_version='4.5.0'
def lombok_version='1.18.12'
def junit_version='5.6.1'
def junit_launcher_version='1.6.1'
dependencies {
    //json
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5"
    compile "com.fasterxml.jackson.core:jackson-annotations"
    compile "com.fasterxml.jackson.core:jackson-databind"
    compile "com.fasterxml.jackson.module:jackson-module-afterburner:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${fasterxml_jackson_version}"
    compile "com.squareup.okhttp3:okhttp:${okhttp_version}"
    compileOnly "org.projectlombok:lombok:${lombok_version}"
    annotationProcessor "org.projectlombok:lombok:${lombok_version}"
    compile 'org.apache.commons:commons-lang3:3.9'
    compile 'commons-io:commons-io:2.6'
    compile "com.google.guava:guava:${google_guava_version}"
    compile 'org.reflections:reflections:0.9.11'
    //test
    testCompileOnly "org.projectlombok:lombok:${lombok_version}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombok_version}"
    testCompile "org.mockito:mockito-core:2.27.0"
    testCompile("org.junit.jupiter:junit-jupiter-api:${junit_version}")
    testCompile("org.junit.jupiter:junit-jupiter-engine:${junit_version}")
    testCompile("org.junit.vintage:junit-vintage-engine:${junit_version}")
    testCompile("org.junit.platform:junit-platform-launcher:${junit_launcher_version}")
    testCompile("org.junit.platform:junit-platform-runner:${junit_launcher_version}")


}
subprojects {
    version = "1.0-SNAPSHOT"
    wrapper {
        gradleVersion = '6.3'
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
